package solidexercicio10.model;

/** Passageiro do tipo Engenheiro: vale 15 pontos e aparece como 'E' no mapa. */
public class Engenheiro extends Passageiro {

    public Engenheiro(String nome, int x, int y) {
        super(nome, "Engenheiro", x, y);
    }

    @Override
    public int getPontuacao() {
        return 15;
    }

    @Override
    public char getSimbolo() {
        return 'E';
    }
}
